# sensorlogger-server

./: .gitignore  CMakeLists.txt
CommunicationInterface/: CMakeLists.txt  SensorLoggerCommunication.thrift
CommunicationService/: CMakeLists.txt  SensorLoggerCommunication.cpp  SensorLoggerCommunication.thrift  SensorLoggerCommunicationServer.cpp  SensorLoggerCommunicationServer.h
SensorDatabase/: CMakeLists.txt  SensorDatabase.cpp  SensorDatabase.h
TempReader/: CMakeLists.txt  Sensor.h  TempReader.cpp  TempReader.h
cmake/: source.txt
debian/: changelog  control  libsensorlogger-dev.install  postinst  postrm  sensorlogger-server.service
resources/: templog.conf
templog-server/: CMakeLists.txt  Timer.cpp  Timer.h  logger.cpp  logger.h  server.cpp
